<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buzapp</string>

    <string name="multiple_txt_back">Voltar</string>

    <string name="home_edt_search_hint">Pesquisar linha</string>
    <string name="home_txt_loading">Pesquisando...</string>

    <string name="config_btn_about">Sobre</string>
    <string name="config_btn_rate">Qualifique esse app</string>
    <string name="config_btn_share">Compartilhar</string>
    <string name="config_btn_report_issue">Informar um problema</string>
    <string name="config_txt_signout"><u>Encerrar conta de login</u></string>

    <string name="about_txt_osm_advice">Este aplicativo usa o Open Street Maps.</string>
    <string name="about_txt_osm_copyright">© OpenStreetMap contributors</string>
    <string name="about_txt_app_version">Versão 1.0</string>
    <string name="about_txt_company_copyright">© 2015 aloeio.</string>
    <string name="about_txt_company_rights">Todos os direitos reservados.</string>

    <string name="core_activity_config">ConfigActivity</string>
    <string name="core_activity_about">AboutActivity</string>
    <string name="core_activity_report">ReportActivity</string>
    <string name="core_activity_times">ScheduleActivity</string>
    <string name="core_facebook_app_id">696988430424642</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_times">Times</string>

    <string name="main_txt_nosignin">Entrar sem login</string>
    <string name="main_txt_loading">Carregando Buzapp</string>
    <string name="main_btn_cancel">Cancelar</string>

    <string name="reportBusIssue_btn_send">Enviar lista</string>
    <string name="reportBusIssue_txt_warning">Selecione somente os problemas que você encontrou neste ônibus.</string>

    <string name="schedule_edt_hint">Buscar por linhas</string>
    <string name="schedule_tbl_header_sigla">Sigla</string>
    <string name="schedule_tbl_header_descricao">"Descrição"</string>
    <string name="schedule_tbl_header_sentido">Sentido</string>
    <string name="schedule_tbl_header_horario">"Horário"</string>
    <string-array name="schedule_spn_filter">
        <item>Sigla</item>
        <item>Descrição</item>
    </string-array>
    <string-array name="schedule_spn_filter_direction">
        <item>Ida</item>
        <item>Volta</item>
    </string-array>

    <string name="report_btn_send">Faltam 125 caracteres para envio</string>
    <string name="report_txt_hint">Escreva entre 125 e 1000 caracteres.</string>
    <string-array name="report_spn_options">
        <item>Fazer reclamação</item>
        <item>Falha na aplicação</item>
        <item>Sugerir melhoria</item>
        <item>Elogiar Buzapp</item>
    </string-array>

    <!-- ACESSIBILITY NÂO MEXA POR NADA NAS SUAS VIDAS! -->
    <!-- ACESSIBILITY NÂO MEXA POR NADA NAS SUAS VIDAS! -->
    <!-- ACESSIBILITY NÂO MEXA POR NADA NAS SUAS VIDAS! -->
    <!-- ACESSIBILITY NÂO MEXA POR NADA NAS SUAS VIDAS! -->
    <string name="facebook_acessibility">Fazer login com o Facebook</string>
    <string name="noLogin_acessibility">Fazer login sem nenhuma conta</string>
    <string name="welcome_acessibility">Seja bem vindo ao Buzapp</string>
    <string name="google_acessibility">Fazer login com o Google</string>
    <string name="searchbus_accessbility">Procurar por uma determinada linha no campo a esquerda</string>
    <string name="fieldsearch_acessibility">Escreva a linha desejada!</string>
    <string name="settings_acessibility">Configurações</string>
    <string name="schedule_acessibility">Quadro com todos os horários de ônibus</string>
    <string name="userlocation_acessibility">Retornar ao mapa e sua localização</string>
    <string name="about_acessibility">BuzApp foi criado pela GePlay, Todos os direitos reservados</string>
    <string name="btnback_acessibility">Retornar ao menu de configurações</string>
    <string name="btn_buscar_linhas_acessibility">Buscar horários de linhas</string>
    <string name="scr_config_acessibility">Tela de Configurações</string>
    <string name="src_about_acessibility">Tela de sobre o aplicativo</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
