<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/light_gray"
             tools:context="aloeio.buzapp.app.Fragments.AboutFragment"
             android:contentDescription="@string/src_about_acessibility">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|bottom">

        <ImageView
                android:id="@+id/about_img_logo"
                android:background="@mipmap/buzapp_logo_1k"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|bottom"
            android:contentDescription="@string/about_acessibility">

        <TextView
                android:id="@+id/about_txt_app_version"
                style="@style/LargeTextView"
                android:layout_marginTop="240dp"
                android:layout_marginBottom="15dp"
                android:text="@string/about_txt_app_version"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"/>

        <TextView
                android:id="@+id/about_txt_company_copyright"
                style="@style/LargeTextView"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="2dp"
                android:text="@string/about_txt_company_copyright"
                android:textSize="15sp"
                android:fontFamily="sans-serif-light"/>

        <TextView
                android:id="@+id/about_txt_company_rights"
                style="@style/SmallTextViewAbout"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:text="@string/about_txt_company_rights"
                android:textSize="15sp"
                android:fontFamily="sans-serif-light"/>

    </LinearLayout>

    <TextView
            android:id="@+id/about_txt_osm_advice"
            style="@style/SmallTextViewAbout"
            android:layout_marginBottom="60dp"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/about_txt_osm_advice"
            android:textColor="@color/graphity"
            android:fontFamily="sans-serif-light"/>

    <TextView
            android:id="@+id/about_txt_osm_copyright"
            style="@style/SmallTextViewAbout"
            android:layout_marginBottom="45dp"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/about_txt_osm_copyright"
            android:textColor="@color/graphity"
            android:fontFamily="sans-serif-light"/>

    <ImageView
            android:id="@+id/btn_voltar"
            style="@style/BackButtonIcon"
            android:src="@mipmap/ic_action_back_black"
            android:contentDescription="@string/btnback_acessibility"/>

    <TextView
            android:id="@+id/txtv_voltar"
            android:text="@string/multiple_txt_back"
            style="@style/BackButtonText"
            android:fontFamily="sans-serif-light"
            android:contentDescription="@string/btnback_acessibility"/>



</FrameLayout>