<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="55dp"
              android:layout_gravity="bottom|center_horizontal"
              android:background="@color/apple_gray_transparent">

    <ImageButton
            android:id="@+id/menu_bar_btn_settings"
            android:background="@drawable/home_button_selector"
            android:src="@mipmap/ic_action_settings"
            android:clickable="true"
            style="@style/ButtonApp"
            android:contentDescription="@string/settings_acessibility"/>


    <ImageButton
            android:id="@+id/menu_bar_btn_schedule"
            android:background="@drawable/home_button_selector"
            android:src="@mipmap/ic_action_time"
            android:clickable="true"
            style="@style/ButtonApp"
            android:contentDescription="@string/schedule_acessibility"/>

    <ImageButton
            android:id="@+id/menu_bar_btn_location"
            android:background="@drawable/home_button_selector"
            android:src="@mipmap/ic_action_place"
            android:clickable="true"
            style="@style/ButtonApp"
            android:contentDescription="@string/userlocation_acessibility"/>

</LinearLayout>

        <!--</LinearLayout>-->