<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/light_gray"
             tools:context="aloeio.buzapp.app.Fragments.PronaucementFragment">

    <ImageView
            android:id="@+id/btn_voltar"
            style="@style/BackButtonIcon"
            android:src="@mipmap/ic_action_back_black"/>

    <TextView
            android:id="@+id/txt_voltar"
            android:text="@string/multiple_txt_back"
            style="@style/BackButtonText"
            android:fontFamily="sans-serif-light"/>

    <TextView
            android:id="@+id/reportBusIssue_txt_warning"
            style="@style/SmallTextViewAbout"
            android:layout_marginTop="42dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="left|top"
            android:text="@string/reportBusIssue_txt_warning"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/graphity"
            android:fontFamily="sans-serif-light"/>

    <ListView
            android:id="@+id/reportBusIssue_lst_data"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="55dp"/>

    <Button
            android:id="@+id/reportBusIssue_btn_send"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom|center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/reportBusIssue_btn_send"
            android:textAllCaps="false"
            android:background="@drawable/send_button_selector"/>


</FrameLayout>