<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/light_gray"
             tools:context="aloeio.buzapp.app.Fragments.ReportFragment">

    <ImageView
            android:id="@+id/btn_voltar"
            style="@style/BackButtonIcon"
            android:src="@mipmap/ic_action_back_black"/>

    <TextView
            android:id="@+id/txt_voltar"
            android:text="@string/multiple_txt_back"
            style="@style/BackButtonText"
            android:fontFamily="sans-serif-light"/>


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="50dp">

        <Spinner
                android:id="@+id/report_spn_options"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:fontFamily="sans-serif-light"
                android:focusable="true"/>

        <EditText
                android:id="@+id/report_edt_message"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="55dp"
                android:layout_gravity="center_horizontal"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:hint="@string/report_txt_hint"
                android:lines="10"
                android:cursorVisible="true"
                android:fontFamily="sans-serif-light"/>

    </LinearLayout>

    <Button
            android:id="@+id/report_btn_send"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/report_btn_send"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:enabled="false"
            android:textAllCaps="false"
            android:background="@drawable/send_button_selector"/>
    <!--</LinearLayout>-->


</FrameLayout>