<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
             tools:context="aloeio.buzapp.app.Fragments.ScheduleFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <AutoCompleteTextView
                android:id="@+id/schedule_edt_autocomplete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="18dp"
                android:maxLength="120"
                android:hint="@string/schedule_edt_hint"
                android:padding="10dip"
                android:textColor="@color/black"
                android:background="@drawable/rectangle_rounded_shape"/>

        <LinearLayout android:id="@+id/fullscreen_home_content_controls2"
                      android:layout_width="50dp"
                      android:layout_height="50dp"
                      android:layout_marginTop="15dp"
                      android:layout_marginRight="5dp"
                      android:layout_gravity="right|top"
                      android:orientation="horizontal"
                      tools:ignore="UselessParent">
            <Button
                    android:id="@+id/schedule_btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|top"
                    android:background="@drawable/search_button"
                    style="?android:attr/buttonStyleSmall"
                    android:contentDescription="@string/btn_buscar_linhas_acessibility"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <Spinner
                android:id="@+id/schedule_spn_filter"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginTop="70dp">

        </Spinner>
        <Spinner
                android:id="@+id/schedule_spn_filter_direction"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                />


    </LinearLayout>


    <LinearLayout
            android:id="@+id/schedule_tbl_header"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_gravity="fill"
            android:layout_marginTop="160dp"
            android:background="@color/white"
            android:orientation="horizontal"

            >


        <TextView
                android:id="@+id/schedule_txt_header_sigla"
                android:layout_marginLeft="0dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/schedule_tbl_header_sigla"
                android:textColor="@color/white"
                android:background="@color/light_dark_blue"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:layout_weight="0.9">
        </TextView>

        <TextView
                android:id="@+id/schedule_txt_header_descricao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/schedule_tbl_header_descricao"
                android:textColor="@color/white"
                android:background="@color/light_dark_blue"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:layout_weight="1.5">
        </TextView>

        <TextView
                android:id="@+id/schedule_txt_header_sentido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/schedule_tbl_header_sentido"
                android:textColor="@color/white"
                android:background="@color/light_dark_blue"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:layout_weight="1">
        </TextView>

        <TextView
                android:id="@+id/schedule_txt_header_horario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/light_dark_blue"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/schedule_tbl_header_horario"
                android:layout_weight="1">
        </TextView>


    </LinearLayout>

    <LinearLayout
            android:id="@+id/schedule_tbl_layout"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginTop="160dp"
            android:visibility="invisible"
            android:gravity="center">

        <EditText android:id="@+id/schedule_edt_min"
                  android:layout_width="140dp"
                  android:layout_height="45dp"
                  android:layout_marginLeft="35dp"
                  android:inputType="time"
                  android:background="@drawable/rectangle_rounded_shape"/>


        <TextView
                android:id="@+id/schedule_edt_separator"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text=" às "/>

        <EditText android:id="@+id/schedule_edt_max"
                  android:layout_width="140dp"
                  android:layout_height="45dp"
                  android:layout_marginRight="10dp"
                  android:inputType="time"
                  android:layout_marginLeft="10dp"
                  android:background="@drawable/rectangle_rounded_shape"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/schedule_tbl_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
        <ListView
                android:id="@+id/schedule_lst_data"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="40.55"
                android:layout_marginTop="185dp"
                android:fadingEdge="none"
                android:cacheColorHint="#00000000"
                android:layout_marginBottom="55dp"
                android:layout_gravity="center">
        </ListView>
    </LinearLayout>

    <!--<LinearLayout android:id="@+id/fullscreen_home_content_controls"-->
                  <!--android:layout_width="match_parent"-->
                  <!--android:layout_height="55dp"-->
                  <!--android:layout_gravity="bottom|center_horizontal"-->
                  <!--android:orientation="horizontal"-->
                  <!--tools:ignore="UselessParent">-->

        <!--<include layout="@layout/linear_menu_bar"/>-->

    <!--</LinearLayout>-->
</FrameLayout>