<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@mipmap/background"
             tools:context="aloeio.buzapp.app.Fragments.LoginFragment">

    <LinearLayout
            android:id="@+id/main_layout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|bottom">

        <ImageView
                android:id="@+id/main_img_logo"
                android:layout_marginTop="10dp"
                style="@style/TemplateWrapContent"
                android:background="@mipmap/buzapp_logo_1k"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal|bottom"
                android:weightSum="1">

            <com.facebook.login.widget.LoginButton
                    android:id="@+id/main_btn_facebook"
                    android:layout_width="270dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="0dp"
                    android:textAllCaps="false"
                    android:contentDescription="@string/facebook_acessibility"/>

            <!--<com.facebook.login.widget.LoginButton-->
                    <!--android:id="@+id/main_btn_facebook"-->
                    <!--android:layout_width="270dp"-->
                    <!--android:layout_height="45dp"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginTop="0dp"-->
                    <!--android:layout_marginBottom="30dp"-->
                    <!--android:textAllCaps="false"-->
                    <!--android:contentDescription="@string/facebook_acessibility"/>-->

            <!--<com.google.android.gms.common.SignInButton-->
                    <!--android:id="@+id/main_btn_google"-->
                    <!--android:layout_width="270dp"-->
                    <!--android:layout_height="45dp"-->
                    <!--android:layout_marginBottom="20dp"-->
                    <!--android:layout_marginTop="-20dp"-->
                    <!--style="@style/ButtonMain"-->
                    <!--android:background="@drawable/google_button_selector"-->
                    <!--android:contentDescription="@string/google_acessibility"-->
                    <!--android:visibility="gone"/>-->

            <Button
                    android:id="@+id/main_btn_nosignin"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/main_txt_nosignin"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:clickable="true"
                    android:layout_marginTop="-10dp"
                    android:textAllCaps="false"
                    android:contentDescription="@string/noLogin_acessibility"/>

        </LinearLayout>
    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->
    <include
            layout="@layout/linear_loading"
            android:layout_above="@+id/login_linear_layout"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"/>


</FrameLayout>
